# mianzhi-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  start.ps1  start.sh
backend/: pyproject.toml  requirements.txt  startup.sh
backend/alembic/: README.md  env.py
backend/alembic/versions/: 5e616ec26249_add_interview_answers_and_evaluations.py  6fba3a7c8156_create_users_and_interview_sessions.py  841c566025ec_add_interview_questions.py  a17c0d9f4b12_add_interview_reports.py  b24e3a8f9c31_add_langgraph_follow_up_agent.py  c39f8a21d7e4_add_rag_knowledge_bases.py  d4f0b7a2c91e_add_resume_rag.py  e9c7a1f3b5d2_add_answer_evidence_expression.py
backend/app/: main.py
backend/app/agents/: interview_graph.py  state.py
backend/app/api/: deps.py  health.py  router.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  answer_evaluation.py  interview_agent_event.py  interview_answer.py  interview_knowledge_base_link.py  interview_question.py  interview_report.py  interview_resume_link.py  interview_session.py  knowledge_base.py  knowledge_chunk.py  knowledge_document.py  resume_chunk.py  user.py  user_resume.py
backend/app/prompts/: answer_evaluation.py  follow_up_decision.py  (+2 more)
backend/tests/: test_health.py  test_phase10b_resume_rag.py  test_phase10c_answer_evidence_expression.py  test_phase1_auth_interviews.py  test_phase2a_questions.py  test_phase2b_answers.py  test_phase2c_reports.py  test_phase3a_followups.py  test_phase4a_speech.py  test_phase5a_rag.py  test_phase6a_analytics.py
(+111 files in other folders)
