[project]
name = "ai-interview-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.23,<2.0.0",
    "pypdf>=6.4.1,<7.0.0",
    "python-multipart>=0.0.32,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
